Add download link and color input

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
                 <label for="text" class="text"></label>
                 <input type="text" id="text" class="text" name="text" placeholder="Add text here"
                     oninput="onGetText(this.value)">
+
+                <a href="#" class="btn" onclick="onDownloadImg(this)" download="my-meme.jpg">Download Image
+                </a>
+                <input type="color" class="color" name="color" value="#FFFFFF">
             </div>
         </section>
 
