Add more tools for adjusting font-size & adding lines and switching between them

--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
                 <canvas width="546" height="546"></canvas>
             </div>
             <div class="tools">
-                <label for="text" class="text"></label>
+
                 <input type="text" id="text" class="text" name="text" placeholder="Add text here"
                     oninput="onGetText(this.value)">
 
                 <a href="#" class="btn" onclick="onDownloadImg(this)" download="my-meme.jpg">Download Image
                 </a>
-                <input type="color" class="color" name="color" value="#FFFFFF">
+                <input type="color" class="txt-color" name="color" value="#FFFFFF" onchange="onChangeTextColor()">
+                <button class="increasing-txt-btn" onclick="onChangeTextSize(2)">Increase</button>
+                <button class="decreasing-txt-btn" onclick="onChangeTextSize(-2)">Decrease</button>
+                <button class="add-line-btn" onclick="onAddTextLine()">Add Line</button>
+                <button class="switch-line-btn" onclick="onSwitchTextLine()">Switch Line</button>
             </div>
         </section>
 
