Add more tools for adjusting font-size & adding lines and switching between them

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
 
                 <a href="#" class="btn" onclick="onDownloadImg(this)" download="my-meme.jpg">Download Image
                 </a>
-                <input type="color" class="color" name="color" value="#FFFFFF">
+                <input type="color" class="txt-color" name="color" value="#FFFFFF" onchange="onChangeTextColor()">
+                <button class="increasing-txt-btn" onclick="onChangeTextSize(2)">Increase</button>
+                <button class="decreasing-txt-btn" onclick="onChangeTextSize(-2)">Decrease</button>
+                <button class="add-line-btn" onclick="onAddTextLine()">Add Line</button>
+                <button class="switch-line-btn" onclick="onSwitchTextLine()">Switch Line</button>
             </div>
         </section>
 
