--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -59,7 +60,7 @@
 
 
                     <select class="font-family select" onchange="onChangeFontFamily()">
-                        <option value="largeImpact">Impact</option>
+                        <option value="archivoBlack">Impact</option>
                         <option value="Arial">Arial</option>
                     </select>
 
