--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                     <select class="font-family select" onchange="onChangeFontFamily()">
                         <option value="archivoBlack">Impact</option>
                         <option value="Arial">Arial</option>
+                        <option value="Gill Sans">Gill</option>
                     </select>
 
                 </section>
