--- a/index.html
+++ b/index.html
@@ -60,15 +60,13 @@
 
 
                     <select class="font-family select" onchange="onChangeFontFamily()">
-                        <option value="archivoBlack">Impact</option>
+                        <option value="Gill Sans">Impact</option>
                         <option value="Arial">Arial</option>
-                        <option value="Gill Sans">Gill</option>
                     </select>
 
                 </section>
 
                 <section class="stickers">
-                    <img src="img/smile.png" />
                 </section>
 
                 <section class="links">
