--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         </section>
 
         <section class="gallery">
+            <section class="img-container"></section>
         </section>
     </main>
 
