--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <script src="https://kit.fontawesome.com/40c9dcff5e.js" crossorigin="anonymous"></script>
@@ -15,6 +16,7 @@
 
     <header>
         <img src="img/LOGO.png" />
+        <div class="hamburger" onclick="toggleMenu()"><i class="fa-solid fa-bars"></i></div>
         <div class="buttons">
             <button class="gallery-btn" onclick="onShowGallery()">Gallery</button>
             <button class="memes-btn" onclick="onShowEditor()">Meme</button>
