Add gallery service

--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <script src="https://kit.fontawesome.com/40c9dcff5e.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/styles/styles.css">
     <title>Meme Generator</title>
-
 </head>
 
 <body onload="onInit()">
@@ -65,7 +63,6 @@
                     <input type="color" id="colorPicker" class="txt-color" name="color" value="#FFFFFF"
                         onchange="onChangeTextColor()">
 
-
                     <select class="font-family select" onchange="onChangeFontFamily()">
                         <option value="Gill Sans">Impact</option>
                         <option value="Arial">Arial</option>
@@ -92,6 +89,7 @@
         </section>
     </main>
 
+    <script src="js/services/gallery-service.js"></script>
     <script src="js/services/meme-service.js"></script>
     <script src="js/gallery-controller.js"></script>
     <script src="js/meme-cotroller.js"></script>
