Implement picking an image from user device

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <button class="add-line-btn" onclick="onAddTextLine()"><i class="fa-solid fa-plus"></i></button>
                     <button class="delete-line-btn" onclick="onDeleteLine()"><i
                             class="fa-solid fa-trash-can"></i></button>
+                    <input type="file" class="file-input btn" name="image" onchange="onImgInput(event)">
                 </section>
 
                 <section class="tools-row-2">
