Add input type of list and more styling

--- a/index.html
+++ b/index.html
@@ -89,6 +89,19 @@
         </section>
 
         <section class="gallery">
+            <div class="filter">
+                <input class="list" list="browsers" placeholder="Search">
+                <img class="search-img" src="img/magnify-glass.png">
+
+                <datalist id="browsers">
+                    <option value="Internet Explorer">
+                    <option value="Firefox">
+                    <option value="Google Chrome">
+                    <option value="Opera">
+                    <option value="Safari">
+                </datalist>
+            </div>
+
             <section class="img-container"></section>
         </section>
 
