--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
 
         <section class="gallery">
             <div class="filter">
-                <input class="list" list="browsers" placeholder="Search">
+                <input class="list" list="browsers" placeholder="Search" oninput="onFilterBy(this.value)">
                 <img class="search-img" src="img/magnify-glass.png">
 
                 <datalist id="browsers">
-                    <option value="Internet Explorer">
-                    <option value="Firefox">
-                    <option value="Google Chrome">
-                    <option value="Opera">
-                    <option value="Safari">
+                    <option value="Funny">
+                    <option value="Animal">
+                    <option value="Baby">
+                    <option value="Men">
+                    <option value="Awkward">
                 </datalist>
             </div>
 
