Add a clear-button for the filter and more images with various aspect ratios

--- a/index.html
+++ b/index.html
@@ -102,7 +102,12 @@
                         <option value="Awkward">
                     </datalist>
                 </div>
-                <div class="keywords"></div>
+
+                <div class="keywords-container">
+                    <div class="keywords"></div>
+                    <button class="clear-filter-btn" onclick="onClearFilterBy()"><i
+                            class="fa-solid fa-circle-xmark"></i></button>
+                </div>
             </section>
 
             <section class="img-container"></section>
