--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
         </section>
     </main>
 
+    <script src="js/services/util-service.js"></script>
     <script src="js/services/storage-service.js"></script>
     <script src="js/services/gallery-service.js"></script>
     <script src="js/services/meme-service.js"></script>
