--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         onchange="onChangeTextColor()">
 
                     <select class="font-family select" onchange="onChangeFontFamily()">
-                        <option value="largeImpact">Impact</option>
+                        <option value="Gill Sans">Impact</option>
                         <option value="Arial">Arial</option>
                     </select>
 
