--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                     <select class="font-family select" onchange="onChangeFontFamily()">
                         <option value="Gill Sans">Impact</option>
-                        <option value="largeImpact">Super Impact</option>
+                        <option value="Arial">Arial</option>
                     </select>
 
                 </section>
